--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,6 +4,11 @@ bind r source-file ~/.tmux.conf
 set-window-option -g mode-keys vi
 set -g mouse on
 
+# Copy mode
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 # Keyboard shortcuts
 bind-key h select-pane -L
 bind-key j select-pane -D
@@ -16,7 +21,7 @@ bind-key C-k resize-pane -U 5
 bind-key C-l resize-pane -R 5
 
 # Open windows and panes in current directory
-# bind c new-window      -c "#{pane_current_path}"
-# bind | split-window -h -c "#{pane_current_path}"
-# bind - split-window -v -c "#{pane_current_path}"
+bind c new-window      -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
