--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,7 @@ unbind r
 bind r source-file ~/.tmux.conf
 
 set-window-option -g mode-keys vi
+set-option -g renumber-windows on
 set -g mouse on
 
 # Copy mode
